BookChart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: book-exchange-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules: 
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: book-exchange-api
                port: 
                  number: 80
